# py-jksip

./: .gitignore  pyproject.toml  requirements.txt
src/jksip/core/: exceptions.py  timer.py
src/jksip/core/transport/: __init__.py  amptp.py  base.py
src/jksip/media/: negotiator.py  parser.py  sdp.py
src/jksip/pjsua/: acc.py  call.py  core.py  data.py
src/jksip/sip/: endpoint.py  message.py  parser.py  regc.py
src/jksip/sip/auth/: digest.py
src/jksip/sip/media/: negotiator.py  parser.py  sdp.py  session.py
src/jksip/sip/transaction/: base.py  key.py  manager.py  uac.py  uas.py
src/jksip/sip/ua/: dialog.py  invite.py  manager.py  party.py
tests/: smoke_test.py  test_parser_basic.py  test_transaction_integration.py  test_transaction_key.py
tests/integration/: test_amptp_auth_reg.py  test_reg_maintenance.py
tests/unit/: test_sdp_logic.py
